--- a/stylesheet.css
+++ b/stylesheet.css
@@ -91,6 +91,10 @@ a {
   font-size: 14px
 }
 
+li{
+  margin:3px
+}
+
 strong {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
   font-size: 14px;
