--- a/stylesheet.css
+++ b/stylesheet.css
@@ -78,7 +78,7 @@ a:hover {
 body{
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
   font-size: 14px;
-  background: #fdfdfd;
+  background: #fcf8f8;
 }
 
 /* body, */
